Add sina data provider and add provider's rest stub project In this change, we have add sina data provider project and its dependency provider rest stub project. The data provider rest stub project is used to hold all DTOs for data providers. File base.xsd is used to define all basic DTO types, e.g. Descriptive entity which has a name and description. File stock.xsd is used to record all stock relative DTO types. All these xsd files will be converted into java classes. In sina provider project, we have add a StockListProvider which will help to retrieve all stocks from sina. It uses a HttpClient to send a request to sina, and uses Jackson's ObjectMapper to convert the retrieved JSON into our DTO. Since the JSON retrieved from sina is not standard(field names are not double quoted), we have configured the ObjectMapper to allow un-quoted field names. And since sina has provide more properties than we have expected for listing stocks, and does not have a corresponding id, we have configured our ObjectMapper to not fail with unknown properties.
Next steps:
Create test project which contains all integration tests. We need to write integration tests for testing sina data provider.
Create our exception system, which could be help for our logging system

--- a/core/data-providers/pom.xml
+++ b/core/data-providers/pom.xml
@@ -4,16 +4,16 @@
 
    <parent>
       <groupId>com.ambergarden.jewelry</groupId>
-      <artifactId>jewelry-parent</artifactId>
+      <artifactId>jewelry-core</artifactId>
       <version>${project.version}</version>
       <relativePath>../</relativePath>
    </parent>
 
-   <artifactId>jewelry-core</artifactId>
+   <artifactId>jewelry-data-providers</artifactId>
    <packaging>pom</packaging>
 
    <modules>
-      <module>data-providers</module>
-      <module>service</module>
+      <module>rest-stub</module>
+      <module>sina</module>
    </modules>
 </project>
