--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,6 @@
       <spring.version>4.1.3.RELEASE</spring.version>
       <aspectj.version>1.6.10</aspectj.version>
       <slf4j.version>1.6.6</slf4j.version>
+      <httpclient.version>4.5</httpclient.version>
    </properties>
 </project>
