--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
    <modules>
       <module>core</module>
+      <module>test</module>
    </modules>
 
    <properties>
@@ -18,5 +19,6 @@
       <aspectj.version>1.6.10</aspectj.version>
       <slf4j.version>1.6.6</slf4j.version>
       <httpclient.version>4.5</httpclient.version>
+      <junit.version>4.9</junit.version>
    </properties>
 </project>
