Add Stock entity for persistence In this change, we have made some configuration work to connect PostgreSQL, and adds the stock entity. That includes: 1. Write JewelryPostgreSQLDialect.java to fix a lacked feature in hibernate. In short, we will leave the id generation logic in a base entity class. That entity class will provide some basic functionalities like equals(), hashCode() etc. But native hibernate does not support this scenario. See comments in that class for more detail. 2. Write persistence.xml. This is per JPA specification. In that configuration, we could specify in which way we will try to persist our entities. 3. Write dal-jpa-context.xml. This is the basic configuration for connecting postgreSQL. 4. Write dal-text-context.xml, which will be used by unit test cases 5. Add Stock entity, which will be persisted in Postgres
Overall, the running curve will be:
1. JUnit tests will use @RunWith annotation to invoke SpringJUnit4ClassRunner, with context configuration points to dal-test-context.xml. (Similiar when started in a web container, which uses an application context)
2. dal-test-context.xml will load required Spring configurations and bean definition files. In this changelist, this should be dal-jpa-context.xml, to load configurations for connecting postgreSQL database, via Spring Data JPA.
3. Spring Data JPA will finally utilize hibernate to persist entities.

--- a/core/service/pom.xml
+++ b/core/service/pom.xml
@@ -10,8 +10,7 @@
       <relativePath>../</relativePath>
    </parent>
 
-   <artifactId>jewelry</artifactId>
-   <name>service</name>
+   <artifactId>jewelry-service</artifactId>
    <packaging>war</packaging>
 
    <dependencies>
