--- a/core/pom.xml
+++ b/core/pom.xml
@@ -14,6 +14,7 @@
 
    <modules>
       <module>data-providers</module>
+      <module>dal</module>
       <module>service</module>
    </modules>
 </project>
