--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,15 @@
       <project.version>0.1.0</project.version>
       <java-version>1.7</java-version>
       <spring.version>4.1.3.RELEASE</spring.version>
+      <spring.data.jpa.version>1.7.1.RELEASE</spring.data.jpa.version>
       <aspectj.version>1.6.10</aspectj.version>
       <slf4j.version>1.6.6</slf4j.version>
       <httpclient.version>4.5</httpclient.version>
       <junit.version>4.9</junit.version>
+      <hibernate.version>4.3.7.Final</hibernate.version>
+      <hibernate.jpa.api.version>1.0.1.Final</hibernate.jpa.api.version>
+      <apache.version>3.3.2</apache.version>
+      <commons.dbcp.version>1.4</commons.dbcp.version>
+      <postgresql.version>9.0-801.jdbc4</postgresql.version>
    </properties>
 </project>
