Add database initialization tool and create test db for unit testing In this change, we have write a small tool to import XML based data into database, and enhanced our script to create a test database. 1. The first step is to separate the content in dal-jpa-context.xml into two separate files. That is because JPA and that small tool operates on the same database, but uses a different methodology. The original dal-jpa-context.xml will be used to address the context specifically used for Spring Data JPA, and the shared datasource information will be recorded in file dal-datasource-context.xml. (Maybe we will use different databases in future, e.g. for testing) 2. Add the test project which will contain all tools/base classes for testing. 3. Add db-init project, which is used to initialize db with OOB data. 4. Add db-init-data project, which is used contain all OOB datas. 5. Enhanced the scripts to allow creating multiple databases. In that case, we will have two separate databases for development. Database "jewelry" is used to record all data for development, while database "test" is only for testing.

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
    <modules>
       <module>core</module>
       <module>test</module>
+      <module>tools</module>
    </modules>
 
    <properties>
@@ -25,6 +26,8 @@
       <hibernate.jpa.api.version>1.0.1.Final</hibernate.jpa.api.version>
       <apache.version>3.3.2</apache.version>
       <commons.dbcp.version>1.4</commons.dbcp.version>
+      <commons.io.version>2.4</commons.io.version>
       <postgresql.version>9.0-801.jdbc4</postgresql.version>
+      <dbunit.version>2.4.8</dbunit.version>
    </properties>
 </project>
