--- a/tools/db-init/pom.xml
+++ b/tools/db-init/pom.xml
@@ -10,7 +10,7 @@
 
    <artifactId>jewelry-db-init</artifactId>
    <packaging>jar</packaging>
-   
+
    <dependencies>
       <dependency>
          <groupId>com.ambergarden.jewelry</groupId>
@@ -27,7 +27,7 @@
          <artifactId>jewelry-db-init-data</artifactId>
          <version>${project.version}</version>
       </dependency>
-      
+
       <dependency>
          <groupId>org.springframework</groupId>
          <artifactId>spring-context</artifactId>
@@ -46,6 +46,7 @@
    </dependencies>
 
    <build>
+      <finalName>${project.artifactId}</finalName>
       <pluginManagement>
          <plugins>
             <!--This plugin's configuration is used to store Eclipse m2e 
@@ -57,5 +58,41 @@
             </plugin>
          </plugins>
       </pluginManagement>
+      <plugins>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+               <execution>
+                  <id>copy-dependencies</id>
+                  <phase>prepare-package</phase>
+                  <goals>
+                     <goal>copy-dependencies</goal>
+                  </goals>
+                  <configuration>
+                     <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                     <overWriteReleases>false</overWriteReleases>
+                     <overWriteSnapshots>false</overWriteSnapshots>
+                     <overWriteIfNewer>false</overWriteIfNewer>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <!-- Build an executable JAR -->
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>2.4</version>
+            <configuration>
+               <archive>
+                  <manifest>
+                     <addClasspath>true</addClasspath>
+                     <classpathPrefix>lib/</classpathPrefix>
+                     <mainClass>com.ambergarden.jewelry.orm.init.DatabaseInitializerRunner</mainClass>
+                  </manifest>
+               </archive>
+            </configuration>
+         </plugin>
+      </plugins>
    </build>
 </project>
