--- a/core/dal/pom.xml
+++ b/core/dal/pom.xml
@@ -62,6 +62,12 @@
          <artifactId>postgresql</artifactId>
          <version>${postgresql.version}</version>
       </dependency>
+
+      <dependency>
+         <groupId>com.ambergarden.jewelry</groupId>
+         <artifactId>jewelry-core-test</artifactId>
+         <version>${project.version}</version>
+      </dependency>
    </dependencies>
 
    <build>
