Add rest stub project In this change, we have add rest stub project, which will contain all DTO definitions. This is different from provider's rest stub project. Provider's rest stub project is provider specific, and could be reused if we'd want to move that provider to other projects. DTO in this rest stub project is specific to jewelry project.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,6 +16,7 @@
       <module>data-providers</module>
       <module>dal</module>
       <module>service</module>
+      <module>rest-stub</module>
       <module>test</module>
    </modules>
 </project>
