Add basic infrastructure of jewelry's services In this change, we have create the basic infrastructure of service. That includes: 1. Change the jaxb bindings to map date to java.util.Date. To utilize global-mappings, we have changed to use maven-jaxb2-plugin instead of maven-jaxb20-plugin 2. Add some base classes for conversion between MO and DTO. 3. Add controller, converter and service for stock syncing task.
Since time limitation, we will use UI to perform black-box testing, instead of adding unit tests.

--- a/core/service/pom.xml
+++ b/core/service/pom.xml
@@ -120,7 +120,22 @@
       <!-- Project dependencies -->
       <dependency>
          <groupId>com.ambergarden.jewelry</groupId>
+         <artifactId>jewelry-provider-rest-stub</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>com.ambergarden.jewelry</groupId>
          <artifactId>jewelry-sina-provider</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>com.ambergarden.jewelry</groupId>
+         <artifactId>jewelry-rest-stub</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>com.ambergarden.jewelry</groupId>
+         <artifactId>jewelry-dal</artifactId>
          <version>${project.version}</version>
       </dependency>
    </dependencies>
