--- a/core/service/src/main/webapp/WEB-INF/web.xml
+++ b/core/service/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
 
    <filter>
       <filter-name>corsFilter</filter-name>
-      <filter-class>com.ambergarden.morpho.filters.CORSFilter</filter-class>
+      <filter-class>com.ambergarden.jewelry.filters.CORSFilter</filter-class>
    </filter>
 
    <filter-mapping>
