--- a/core/service/pom.xml
+++ b/core/service/pom.xml
@@ -32,12 +32,24 @@
          <artifactId>spring-webmvc</artifactId>
          <version>${spring.version}</version>
       </dependency>
+      <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-oxm</artifactId>
+         <version>${spring.version}</version>
+      </dependency>
 
       <!-- AspectJ -->
       <dependency>
          <groupId>org.aspectj</groupId>
          <artifactId>aspectjrt</artifactId>
          <version>${aspectj.version}</version>
+      </dependency>
+
+      <!-- Jackson JSON Mapper -->
+      <dependency>
+         <groupId>org.codehaus.jackson</groupId>
+         <artifactId>jackson-mapper-asl</artifactId>
+         <version>1.7.1</version>
       </dependency>
 
       <!-- Logging -->
